// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuizRow renders 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
  testID="quiz-row-0"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "quizLine",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        Quiz 1
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          separated={
            Array [
              "Due Jan 23, 2013 at 11:59 PM",
            ]
          }
          separator="  •  "
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              },
            ]
          }
        >
          Due Jan 23, 2013 at 11:59 PM
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            separated={
              Array [
                "20 pts",
                "12 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            20 pts
          </Text>
          <Text
            accessibilityLabel=""
            accessible={false}
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#8B969E",
                    "fontSize": 10,
                  },
                ],
              ]
            }
          >
              •  
          </Text>
          <Text
            separated={
              Array [
                "20 pts",
                "12 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            12 Questions
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderColor": "#C7CDD1",
                "borderRightWidth": 2,
                "borderTopWidth": 2,
                "height": 10,
                "marginLeft": 7,
                "width": 10,
              },
              Object {
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`QuizRow renders multiple question count 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
  testID="quiz-row-0"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "quizLine",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        Quiz 1
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          separated={
            Array [
              "Due Jan 23, 2013 at 11:59 PM",
            ]
          }
          separator="  •  "
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              },
            ]
          }
        >
          Due Jan 23, 2013 at 11:59 PM
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            separated={
              Array [
                "20 pts",
                "144 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            20 pts
          </Text>
          <Text
            accessibilityLabel=""
            accessible={false}
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#8B969E",
                    "fontSize": 10,
                  },
                ],
              ]
            }
          >
              •  
          </Text>
          <Text
            separated={
              Array [
                "20 pts",
                "144 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            144 Questions
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderColor": "#C7CDD1",
                "borderRightWidth": 2,
                "borderTopWidth": 2,
                "height": 10,
                "marginLeft": 7,
                "width": 10,
              },
              Object {
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`QuizRow renders published 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
  testID="quiz-row-0"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "quizLine",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        Quiz 1
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          separated={
            Array [
              "Due Jan 23, 2013 at 11:59 PM",
            ]
          }
          separator="  •  "
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              },
            ]
          }
        >
          Due Jan 23, 2013 at 11:59 PM
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            separated={
              Array [
                "20 pts",
                "12 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            20 pts
          </Text>
          <Text
            accessibilityLabel=""
            accessible={false}
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#8B969E",
                    "fontSize": 10,
                  },
                ],
              ]
            }
          >
              •  
          </Text>
          <Text
            separated={
              Array [
                "20 pts",
                "12 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            12 Questions
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderColor": "#C7CDD1",
                "borderRightWidth": 2,
                "borderTopWidth": 2,
                "height": 10,
                "marginLeft": 7,
                "width": 10,
              },
              Object {
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`QuizRow renders selected 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
  testID="quiz-row-0"
  underlayColor="#F5F5F5"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#F5F5F5",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "quizLine",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        Quiz 1
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          separated={
            Array [
              "Due Jan 23, 2013 at 11:59 PM",
            ]
          }
          separator="  •  "
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              },
            ]
          }
        >
          Due Jan 23, 2013 at 11:59 PM
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            separated={
              Array [
                "20 pts",
                "12 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            20 pts
          </Text>
          <Text
            accessibilityLabel=""
            accessible={false}
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#8B969E",
                    "fontSize": 10,
                  },
                ],
              ]
            }
          >
              •  
          </Text>
          <Text
            separated={
              Array [
                "20 pts",
                "12 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            12 Questions
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderColor": "#C7CDD1",
                "borderRightWidth": 2,
                "borderTopWidth": 2,
                "height": 10,
                "marginLeft": 7,
                "width": 10,
              },
              Object {
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`QuizRow renders single question count 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
  testID="quiz-row-0"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "quizLine",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        Quiz 1
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          separated={
            Array [
              "Due Jan 23, 2013 at 11:59 PM",
            ]
          }
          separator="  •  "
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              },
            ]
          }
        >
          Due Jan 23, 2013 at 11:59 PM
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            separated={
              Array [
                "20 pts",
                "1 Question",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            20 pts
          </Text>
          <Text
            accessibilityLabel=""
            accessible={false}
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#8B969E",
                    "fontSize": 10,
                  },
                ],
              ]
            }
          >
              •  
          </Text>
          <Text
            separated={
              Array [
                "20 pts",
                "1 Question",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            1 Question
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderColor": "#C7CDD1",
                "borderRightWidth": 2,
                "borderTopWidth": 2,
                "height": 10,
                "marginLeft": 7,
                "width": 10,
              },
              Object {
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`QuizRow renders unpublished 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
  testID="quiz-row-0"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
    >
      <View
        accessibilityLabel="Not Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "quizLine",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "noSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#8B969E",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        Quiz 1
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          separated={
            Array [
              "Due Jan 23, 2013 at 11:59 PM",
            ]
          }
          separator="  •  "
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              },
            ]
          }
        >
          Due Jan 23, 2013 at 11:59 PM
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            separated={
              Array [
                "20 pts",
                "12 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            20 pts
          </Text>
          <Text
            accessibilityLabel=""
            accessible={false}
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "alignSelf": "center",
                    "color": "#8B969E",
                    "fontSize": 10,
                  },
                ],
              ]
            }
          >
              •  
          </Text>
          <Text
            separated={
              Array [
                "20 pts",
                "12 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            12 Questions
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderColor": "#C7CDD1",
                "borderRightWidth": 2,
                "borderTopWidth": 2,
                "height": 10,
                "marginLeft": 7,
                "width": 10,
              },
              Object {
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`QuizRow renders without points possible 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
  testID="quiz-row-0"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "flex-start",
        }
      }
    >
      <View
        accessibilityLabel="Published"
        style={
          Object {
            "flex": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "uri": "quizLine",
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {
                "tintColor": "#fff",
              },
            ]
          }
          testID="access-icon-image"
        />
        <Image
          source={
            Object {
              "uri": "publishSolid",
            }
          }
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "bottom": -4,
                "height": 16,
                "position": "absolute",
                "right": -4,
                "width": 16,
              },
              Object {
                "tintColor": "#00AC18",
              },
            ]
          }
          testID="access-icon-icon"
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 12,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={2}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#2D3B45",
                "fontWeight": "600",
              },
            ],
          ]
        }
      >
        Quiz 1
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          separated={
            Array [
              "Due Jan 23, 2013 at 11:59 PM",
            ]
          }
          separator="  •  "
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "marginTop": 2,
              },
            ]
          }
        >
          Due Jan 23, 2013 at 11:59 PM
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            separated={
              Array [
                "12 Questions",
              ]
            }
            separator="  •  "
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "fontSize": 14,
                },
              ]
            }
          >
            12 Questions
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderColor": "#C7CDD1",
                "borderRightWidth": 2,
                "borderTopWidth": 2,
                "height": 10,
                "marginLeft": 7,
                "width": 10,
              },
              Object {
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</TouchableHighlight>
`;
